[package]
name = "raylib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4.6"
lazy_static = "1.4.0"
overload = "0.1"
oorandom = "11.1.3"

[dev-dependencies]